add CPU model |  Launcher for packaging